# start-flutter

./: README.md
demo_intl/: README.md  pubspec.yaml
demo_intl/android/app/: build.gradle
demo_intl/android/app/src/main/: AndroidManifest.xml
demo_intl/android/app/src/main/kotlin/com/example/demo_intl/: MainActivity.kt
demo_intl/ios/Runner/: Info.plist
demo_intl/ios/Runner.xcodeproj/: project.pbxproj
demo_intl/lib/: default.dart  event.dart  main.dart
demo_intl/lib/l10n/: app_en.arb  app_zh.arb
demo_intl/linux/: CMakeLists.txt  my_application.cc
demo_intl/macos/Runner.xcodeproj/: project.pbxproj
demo_intl/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
demo_intl/macos/Runner/Configs/: AppInfo.xcconfig
demo_intl/test/: widget_test.dart
demo_intl/web/: index.html  manifest.json
demo_intl/windows/: CMakeLists.txt
demo_intl/windows/runner/: Runner.rc  main.cpp
demo_mobx/: README.md  pubspec.yaml
demo_mobx/android/app/: build.gradle
demo_mobx/android/app/src/main/: AndroidManifest.xml
demo_mobx/android/app/src/main/kotlin/com/example/demo_mobx/: MainActivity.kt
demo_mobx/ios/Runner/: Info.plist
demo_mobx/ios/Runner.xcodeproj/: project.pbxproj
demo_mobx/lib/: main.dart
demo_mobx/linux/: CMakeLists.txt  my_application.cc
demo_mobx/macos/Runner.xcodeproj/: project.pbxproj
demo_mobx/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
demo_mobx/macos/Runner/Configs/: AppInfo.xcconfig
demo_mobx/test/: widget_test.dart
demo_mobx/web/: index.html  manifest.json
demo_mobx/windows/: CMakeLists.txt
demo_mobx/windows/runner/: Runner.rc  main.cpp
demo_ncnn/: .metadata  README.md  pubspec.yaml
demo_ncnn/android/app/: build.gradle
demo_ncnn/android/app/src/main/: AndroidManifest.xml
demo_ncnn/android/app/src/main/java/dev/flutter/demo_ncnn/: MainActivity.java
demo_ncnn/ios/Runner/: Info.plist
demo_ncnn/ios/Runner.xcodeproj/: project.pbxproj
demo_ncnn/lib/: main.dart
demo_ncnn/lib/store/: future_store.dart  future_store.g.dart  image_store.dart  image_store.g.dart  option_store.dart  option_store.g.dart  stores.dart  yolox_store.dart  yolox_store.g.dart
demo_ncnn/lib/ui/: app.dart  detect_result_page.dart  detect_result_painter.dart  home_page.dart
demo_ncnn/lib/util/: dylib_utils.dart  image.dart  log.dart
demo_ncnn/lib/yolox/: config.yaml  yolox.cc  yolox.dart  yolox.h
demo_ncnn/linux/: .gitignore  CMakeLists.txt  my_application.cc
demo_ncnn/linux/flutter/: generated_plugins.cmake
demo_ncnn/linux/lib/: CMakeLists.txt  Makefile  yolox_test.cc  yolox_test.dart
demo_ncnn/test/: widget_test.dart
first_app/: README.md  pubspec.yaml
first_app/android/app/: build.gradle
first_app/android/app/src/main/: AndroidManifest.xml
first_app/ios/Runner/: Info.plist
first_app/ios/Runner.xcodeproj/: project.pbxproj
first_app/lib/: main.dart
first_app/linux/: CMakeLists.txt  my_application.cc
first_app/macos/Runner.xcodeproj/: project.pbxproj
first_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
first_app/macos/Runner/Configs/: AppInfo.xcconfig
first_app/web/: index.html
first_app/windows/: CMakeLists.txt
first_app/windows/runner/: Runner.rc
plugins/ncnn_yolox/: .metadata  README.md  ffigen.yaml  ncnn_yolox.md  pubspec.yaml
plugins/ncnn_yolox/android/: .gitignore  build.gradle  settings.gradle
plugins/ncnn_yolox/android/src/main/: AndroidManifest.xml
plugins/ncnn_yolox/example/: README.md  pubspec.yaml
plugins/ncnn_yolox/example/android/app/: build.gradle
plugins/ncnn_yolox/example/android/app/src/main/: AndroidManifest.xml
plugins/ncnn_yolox/example/android/app/src/main/kotlin/dev/flutter/ncnn_yolox_example/: MainActivity.kt
plugins/ncnn_yolox/example/ios/Runner/: Info.plist
plugins/ncnn_yolox/example/ios/Runner.xcodeproj/: project.pbxproj
plugins/ncnn_yolox/example/lib/: main.dart
plugins/ncnn_yolox/example/linux/: CMakeLists.txt  my_application.cc
plugins/ncnn_yolox/example/linux/flutter/: generated_plugins.cmake
plugins/ncnn_yolox/ios/: ncnn_yolox.podspec
plugins/ncnn_yolox/ios/Classes/: ncnn_yolox.c
plugins/ncnn_yolox/lib/: ncnn_yolox.dart  ncnn_yolox_bindings_generated.dart
plugins/ncnn_yolox/linux/: .gitignore  CMakeLists.txt  Makefile  ncnn_yolox_test.cc  ncnn_yolox_test.dart
plugins/ncnn_yolox/src/: CMakeLists.txt  ncnn_yolox.c  ncnn_yolox.cc  ncnn_yolox.h
